# simple-lio

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
docs/: 公式推导.md
include/: file_helper.hpp  imu_process.hpp  scan_registration.hpp  so3_math.hpp
launch/: simple_lio.launch
log/: 20220721-C++.md  20220723-fastlio-观测方程.md
rviz/: simple_lio.rviz
src/: custom_msg_to_sensor_msg.cpp  imu_process.cpp  laserMapping.cpp
